# model_cropping_sc_contrast-agnostic_yolo

./: .gitignore  CLAUDE.md  README.md  audit_10mm.csv  bad_gt.csv  requirements.txt
configs/: dataset.yaml  datasets.yaml  evaluation.yaml  pipeline.yaml  preprocess.yaml  training.yaml  training_cls.yaml  training_dataset.yaml
data/: dataset_regions.csv  datasets.yaml  datasets_summary.csv  raw
data/datasplits_seed50/: datasplit_basel-mp2rage_seed50.yaml  datasplit_beijing-tumor_seed50.yaml  datasplit_canproco_seed50.yaml  datasplit_data-single-subject_seed50.yaml  datasplit_dcm-brno_seed50.yaml  datasplit_dcm-oklahoma_seed50.yaml  datasplit_dcm-zurich-lesions-20231115_seed50.yaml  datasplit_dcm-zurich-lesions_seed50.yaml  datasplit_exvivo-spinal-cord_seed50.yaml  datasplit_hc-lumbar-shanghai_seed50.yaml  datasplit_hc-lumbar-zurich_seed50.yaml  datasplit_head-neck-tumor-challenge-2024_seed50.yaml  datasplit_inspired_seed50.yaml  datasplit_lumbar-epfl_seed50.yaml  datasplit_lumbar-vanderbilt_seed50.yaml  (+9 more)
docs/: focal_loss_ultralytics.md  model_metrics.md
sc_crop/: RELEASE.md  WORKFLOW.md  pyproject.toml
sc_crop/sc_crop/: __init__.py  cli.py  crop.py  download.py
sc_crop/sc_crop/models/: config.yaml
scripts/: 01_clone_dataset.py  2d_adj_gap_stats.py  2d_box_stats.py  2d_edge_gap_stats.py  2d_face_gap_stats.py  2d_face_neighbor_stats.py  audit_dataset.py  benchmark_cpu.py  border_metrics.py  build_class_dataset.py  build_dataset.py  convert_labels.py  download_all_datasets.sh  evaluate.py  evaluate_cls.py  explore_stats.py  export_model.py  find_failures.py  infer.py  make_splits.py  metrics.py  plot_dataset_content.py  plot_metrics.py  plot_splits.py  predict_volume.py  preprocess.py  reconstruct.py  run_eval_pipeline.sh  run_pipeline.py  run_pipeline.sh  run_pipeline_class.py  run_train_sagittal_1mm_3ch.sh  show_failures.py  show_rgb_channels.py  train.py  train_cls.py  utils.py  visualize_metrics.py
(+18 files in other folders)
