[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sc-crop"
version     = "0.1.0"
description = "Spinal cord detection and volume cropping — ONNX-based, no ultralytics required"
requires-python = ">=3.8"
dependencies = [
    "nibabel>=3.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "onnxruntime>=1.12",
    "pillow>=8.0",
    "pyyaml>=5.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.12"]

[project.scripts]
sc-crop = "sc_crop.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sc_crop = ["models/*.yaml", "models/*.onnx"]
