[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sc-crop"
version     = "0.2.0"
description = "Spinal cord detection and volume cropping using ultralytics YOLO"
requires-python = ">=3.8"
dependencies = [
    "nibabel>=3.0",
    "numpy>=1.20",
    "pillow>=8.0",
    "pyyaml>=5.0",
    "ultralytics>=8.0",
]

[project.scripts]
sc-crop = "sc_crop.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sc_crop = ["models/*.yaml"]
