[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "sc-crop"
version     = "0.2.0"
description = "Spinal cord detection and volume cropping using ultralytics YOLO"
requires-python = ">=3.8"
dependencies = [
    "nibabel==5.3.3",
    "numpy==2.0.2",
    "pillow==11.3.0",
    "pyyaml==6.0.2",
    "ultralytics==8.4.33",
]

[project.scripts]
sc-crop = "sc_crop.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sc_crop = ["models/*.yaml", "models/*.pt", "models/*.onnx"]
